<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/g1_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_game1" />

        <com.game.magicard.widget.CanaroTextView
            style="@style/TextView.GuillotineItem.Selected"
            android:text="@string/game1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/g2_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_game2" />

        <com.game.magicard.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/game2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/g3_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_game3" />

        <com.game.magicard.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/game3" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings" />

        <com.game.magicard.widget.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/settings" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />
    <ImageView
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"/>
</LinearLayout>