<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background_dark"
    android:orientation="vertical">
    <View
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_actionbar_background_view_height"
        android:background="@color/guillotine_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetStart="0dp"
            style="@style/Toolbar">

            <ImageView
                android:id="@+id/content_hamburger"
                style="@style/ImageView.Hamburger"
                android:src="@drawable/ic_menu_90" />

            <com.game.magicard.widget.CanaroTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/game3"
                android:textSize="@dimen/guillotine_item_text_size" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <Button
                android:id="@+id/bt_tel"
                style="@style/LinearLayout.GuillotineItem"
                android:text="@string/bt_tel"
                android:textColor="@color/selected_item_color"
                android:textSize="24sp"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/guillotine_divider_height" />
            <Button
                android:id="@+id/bt_write"
                style="@style/LinearLayout.GuillotineItem"
                android:text="@string/bt_write"
                android:textColor="@color/selected_item_color"
                android:textSize="24sp"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/guillotine_divider_height" />
            <Button
                android:id="@+id/bt_help"
                style="@style/LinearLayout.GuillotineItem"
                android:text="@string/bt_help"
                android:textColor="@color/selected_item_color"
                android:textSize="24sp"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/guillotine_divider_height" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/guillotine_divider_height" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/guillotine_divider_height" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>